# cdumay_http_client

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  client_http.rs  client_rest.rs  errors.rs  lib.rs  utils.rs
src/authentication/: basic.rs  mod.rs
src/clients/: mod.rs  rest.rs
src/errors/: client.rs  http.rs  mod.rs  rest.rs
