[package]
name = "cdumay_http_client"
version = "0.1.3"
authors = ["Cédric Dumay <cedric.dumay@corp.ovh.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/cdumay_result"
repository = "https://github.com/cdumay/rust-cdumay_result"
homepage =  "https://github.com/cdumay/rust-cdumay_result"
description = """A library to call remote web application"""
keywords = ["http", "serde", "REST"]
categories = ["authentication",  "data-structures", "encoding", "parsing", "web-programming::http-client"]


[dependencies]
base64 = "0.11"
cdumay_error = { git = "https://github.com/cdumay/rust-cdumay_errors" }
cdumay_result = { git = "https://github.com/cdumay/rust-cdumay_result" }
chrono = "0.4"
http = "0.1"
humantime = "1.3"
log = "0.4"
reqwest = "0.9"
serde = "1.0"
serde-value = "0.6"
