[package]
name = "cdumay_http_client"
version = "1.0.0"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
categories = ["authentication", "data-structures", "encoding", "parsing", "web-programming::http-client"]
description = """A bundle of http clients to call remote web application"""
documentation = "https://docs.rs/cdumay_http_client"
edition = "2021"
homepage = "https://github.com/cdumay/cdumay_http_client"
keywords = ["http", "serde"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_http_client"

[dependencies]
base64 = "0.22"
cdumay_error = { version = "1.0", features = ["derive"] }
cdumay_context = "1.0"
chrono = "0.4"
http = "1.2"
humantime = "2.1"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
serde_json = "1.0"

[dev-dependencies]
simple_logger = "5.0"
tokio = { version = "1.36", features = ["full"] }
wiremock = "0.6"